feat: x509 api
